Swagger doc integration
