# config/swagger.json
@@ -1,269 +1,190 @@
 {
   "swagger": "2.0",
-  "info": {
-    "version": "1.0.0",
-    "title": "Project for screening test RLIDev2",
-    "description": "Yet Another Node.js Blogg Application API",
-    "license": {
-      "name": "MIT",
-      "url": "https://opensource.org/licenses/MIT"
-    }
-  },
+  "info": { "title": "Project for screening test RLIDev2", "version": "1.0.0" },
   "host": "localhost:5000",
   "basePath": "/api/v1",
+  "securityDefinitions": {
+    "Bearer": { "type": "apiKey", "name": "Authorization", "in": "header" }
+  },
   "tags": [
     {
       "name": "Authentication",
-      "description": "API login and register user, here you can get the access token needed to access other api"
+      "description": "API login and register user, here you can get the access token needed"
     },
     {
       "name": "Products",
-      "description": "API for products in the system"
+      "description": " API to perform CRUD operation on product"
     }
   ],
-  "schema": ["http"],
-  "consumes": ["application/json"],
-  "produces": ["application/json"],
-  "securityDefinitions": {
-    "Bearer": {
-      "type": "apiKey",
-      "name": "Authorization",
-      "in": "header"
-    }
-  },
   "paths": {
+    "/products": {
+      "get": {
+        "summary": "Get all product",
+        "tags": ["Products"],
+        "description": "Get all products",
+        "produces": ["application/json"],
+        "security": [{ "Bearer": [] }],
+        "responses": { "200": { "description": "login" } }
+      },
+      "post": {
+        "summary": "Create new product",
+        "tags": ["Products"],
+        "description": "Create new product",
+        "produces": ["application/json"],
+        "security": [{ "Bearer": [] }],
+        "parameters": [
+          {
+            "name": "product data",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "properties": {
+                "code": { "type": "string", "example": "BR001" },
+                "name": { "type": "string", "example": "Headset Razer" },
+                "price": { "type": "integer", "example": 45000 },
+                "stock": { "type": "integer", "example": 45 }
+              }
+            }
+          }
+        ],
+        "responses": { "200": { "description": "login" } }
+      }
+    },
+    "/products/{code}": {
+      "get": {
+        "summary": "Get product by code",
+        "tags": ["Products"],
+        "description": "get product by code",
+        "produces": ["application/json"],
+        "security": [{ "Bearer": [] }],
+        "parameters": [
+          {
+            "name": "code",
+            "in": "path",
+            "required": true,
+            "description": "code of product that you want to find",
+            "type": "string"
+          }
+        ],
+        "responses": { "200": { "description": "login" } }
+      },
+      "put": {
+        "summary": "Update product by code",
+        "tags": ["Products"],
+        "description": "update product by code",
+        "produces": ["application/json"],
+        "security": [{ "Bearer": [] }],
+        "parameters": [
+          {
+            "name": "code",
+            "in": "path",
+            "required": true,
+            "description": "code of product that you want to update",
+            "type": "string"
+          },
+          {
+            "name": "product data",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "properties": {
+                "name": { "type": "string", "example": "Headset Razer" },
+                "price": { "type": "integer", "example": 45000 },
+                "stock": { "type": "integer", "example": 45 }
+              }
+            }
+          }
+        ],
+        "responses": { "200": { "description": "login" } }
+      },
+      "delete": {
+        "summary": "Delete product by code",
+        "tags": ["Products"],
+        "description": "update product by code",
+        "produces": ["application/json"],
+        "security": [{ "Bearer": [] }],
+        "parameters": [
+          {
+            "name": "code",
+            "in": "path",
+            "required": true,
+            "description": "code of product that you want to delete",
+            "type": "string"
+          }
+        ],
+        "responses": { "200": { "description": "login" } }
+      }
+    },
     "/users/login": {
       "post": {
+        "summary": "Login",
         "tags": ["Authentication"],
         "description": "Login to get access token",
         "produces": ["application/json"],
         "parameters": [
           {
             "name": "credentials",
-            "in": "body",
             "description": "email and password",
+            "in": "body",
+            "required": true,
             "schema": {
-              "$ref": "#/definitions/Login"
+              "properties": {
+                "email": {
+                  "type": "string",
+                  "required": true,
+                  "example": "jhondoe@gmail.com"
+                },
+                "password": {
+                  "type": "string",
+                  "required": true,
+                  "example": "passwordku"
+                }
+              }
             }
           }
         ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
+        "responses": { "200": { "description": "login" } }
       }
     },
     "/users/register": {
       "post": {
+        "summary": "Register",
         "tags": ["Authentication"],
-        "description": "Register user and get access token",
+        "description": "Register a user and get access token",
         "produces": ["application/json"],
         "parameters": [
           {
             "name": "credentials",
-            "in": "body",
             "description": "email, name, and password",
-            "schema": {
-              "$ref": "#/definitions/Register"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      }
-    },
-    "/products": {
-      "get": {
-        "tags": ["Products"],
-        "description": "Get All products",
-        "produces": ["application/json"],
-        "security": [
-          {
-            "Bearer": []
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK",
-            "schema": {
-              "$ref": "#/definitions/Products"
-            }
-          }
-        }
-      },
-      "post": {
-        "tags": ["Products"],
-        "description": "Create a product",
-        "security": [
-          {
-            "Bearer": []
-          }
-        ],
-        "parameters": [
-          {
-            "name": "product",
             "in": "body",
-            "description": "new product properties",
+            "required": true,
+            "type": "string",
             "schema": {
-              "$ref": "#/definitions/Product"
+              "properties": {
+                "email": {
+                  "type": "string",
+                  "required": true,
+                  "example": "jhondoe@gmail.com"
+                },
+                "name": {
+                  "type": "string",
+                  "required": true,
+                  "example": "jhon doe"
+                },
+                "password": {
+                  "type": "string",
+                  "required": true,
+                  "example": "passwordku"
+                }
+              }
             }
           }
         ],
-        "responses": {
-          "200": {
-            "description": "OK",
-            "schema": {
-              "$ref": "#/definitions/Product"
-            }
-          }
-        }
-      }
-    },
-    "/products/{code}": {
-      "security": [
-        {
-          "Bearer": []
-        }
-      ],
-      "parameters": [
-        {
-          "name": "code",
-          "in": "path",
-          "required": true,
-          "description": "code of product that we want to find",
-          "type": "string"
-        }
-      ],
-      "get": {
-        "tags": ["Products"],
-        "summary": "Get product with given code",
-        "security": [
-          {
-            "Bearer": []
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Product found",
-            "schema": {
-              "type": "object",
-              "properties": {}
-            }
-          }
-        }
-      },
-      "put": {
-        "tags": ["Products"],
-        "summary": "Update product with given code",
-        "security": [
-          {
-            "Bearer": []
-          }
-        ],
-        "parameters": [
-          {
-            "name": "product",
-            "in": "body",
-            "description": "Product with new values of properties",
-            "schema": {
-              "$ref": "#/definitions/Product"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Product updated",
-            "schema": {
-              "$ref": "#/definitions/Product"
-            }
-          }
-        }
-      },
-      "delete": {
-        "tags": ["Products"],
-        "summary": "Delete product with given code",
-        "security": [
-          {
-            "Bearer": []
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Product deleted",
-            "schema": {
-              "$ref": "#/definitions/Product"
-            }
-          }
-        }
+        "responses": { "200": { "description": "register" } }
       }
     }
   },
-  "definitions": {
-    "Login": {
-      "required": ["email", "password"],
-      "properties": {
-        "email": {
-          "type": "string"
-        },
-        "password": {
-          "type": "string"
-        }
-      }
-    },
-    "Register": {
-      "required": ["email", "name", "password"],
-      "properties": {
-        "email": {
-          "type": "string"
-        },
-        "name": {
-          "type": "string"
-        },
-        "password": {
-          "type": "string"
-        }
-      }
-    },
-    "Product": {
-      "required": ["code", "name", "price", "stock"],
-      "properties": {
-        "id": {
-          "type": "integer",
-          "example": 1
-        },
-        "code": {
-          "type": "string",
-          "example": "BR001"
-        },
-        "name": {
-          "type": "string",
-          "example": "Headset Razer"
-        },
-        "price": {
-          "type": "integer",
-          "example": 45000
-        },
-        "stock": {
-          "type": "integer",
-          "example": 45
-        },
-        "createdAt": {
-          "type": "string",
-          "example": "2020-02-01T02:55:15.000Z"
-        },
-        "updatedAt": {
-          "type": "string",
-          "example": "2020-02-01T02:55:15.000Z"
-        }
-      }
-    },
-    "Products": {
-      "type": "array",
-      "$ref": "#/definitions/Product"
-    }
-  }
+  "definitions": {},
+  "responses": {},
+  "parameters": {}
 }
