# controllers/products.js
@@ -1,5 +1,22 @@
 const { Product } = require("../models");
 
+/**
+ * @swagger
+ *
+ * /products:
+ *   get:
+ *     summary: Get all product
+ *     tags:
+ *       - Products
+ *     description: Get all products
+ *     produces:
+ *       - application/json
+ *     security:
+ *       - Bearer: []
+ *     responses:
+ *       200:
+ *         description: login
+ */
 exports.getAllProduct = async (req, res) => {
   try {
     // get all product from database
@@ -18,6 +35,29 @@ exports.getAllProduct = async (req, res) => {
   }
 };
 
+/**
+ * @swagger
+ *
+ * /products/{code}:
+ *   get:
+ *     summary: Get product by code
+ *     tags:
+ *       - Products
+ *     description: get product by code
+ *     produces:
+ *       - application/json
+ *     security:
+ *       - Bearer: []
+ *     parameters:
+ *       - name: code
+ *         in: path
+ *         required: true
+ *         description: code of product that you want to find
+ *         type: string
+ *     responses:
+ *       200:
+ *         description: login
+ */
 exports.getProductByCode = async (req, res) => {
   try {
     const { code } = req.params;
@@ -46,6 +86,41 @@ exports.getProductByCode = async (req, res) => {
   }
 };
 
+/**
+ * @swagger
+ *
+ * /products:
+ *   post:
+ *     summary: Create new product
+ *     tags:
+ *       - Products
+ *     description: Create new product
+ *     produces:
+ *       - application/json
+ *     security:
+ *       - Bearer: []
+ *     parameters:
+ *       - name: product data
+ *         in: body
+ *         required: true
+ *         schema:
+ *           properties:
+ *             code:
+ *               type: string
+ *               example: BR001
+ *             name:
+ *               type: string
+ *               example: Headset Razer
+ *             price:
+ *               type: integer
+ *               example: 45000
+ *             stock:
+ *               type: integer
+ *               example: 45
+ *     responses:
+ *       200:
+ *         description: login
+ */
 exports.createProduct = async (req, res) => {
   try {
     const { code, name, price, stock } = req.body;
@@ -82,6 +157,43 @@ exports.createProduct = async (req, res) => {
   }
 };
 
+/**
+ * @swagger
+ *
+ * /products/{code}:
+ *   put:
+ *     summary: Update product by code
+ *     tags:
+ *       - Products
+ *     description: update product by code
+ *     produces:
+ *       - application/json
+ *     security:
+ *       - Bearer: []
+ *     parameters:
+ *       - name: code
+ *         in: path
+ *         required: true
+ *         description: code of product that you want to update
+ *         type: string
+ *       - name: product data
+ *         in: body
+ *         required: true
+ *         schema:
+ *           properties:
+ *             name:
+ *               type: string
+ *               example: Headset Razer
+ *             price:
+ *               type: integer
+ *               example: 45000
+ *             stock:
+ *               type: integer
+ *               example: 45
+ *     responses:
+ *       200:
+ *         description: login
+ */
 exports.updateProduct = async (req, res) => {
   try {
     const { code } = req.params;
@@ -118,6 +230,29 @@ exports.updateProduct = async (req, res) => {
   }
 };
 
+/**
+ * @swagger
+ *
+ * /products/{code}:
+ *   delete:
+ *     summary: Delete product by code
+ *     tags:
+ *       - Products
+ *     description: update product by code
+ *     produces:
+ *       - application/json
+ *     security:
+ *       - Bearer: []
+ *     parameters:
+ *       - name: code
+ *         in: path
+ *         required: true
+ *         description: code of product that you want to delete
+ *         type: string
+ *     responses:
+ *       200:
+ *         description: login
+ */
 exports.deleteProduct = async (req, res) => {
   try {
     const { code } = req.params;
